# fata-morgana

./: .gitignore  LICENSE.txt  Makefile  README.md  build.zig  build.zig.zon  configure.sh  dune-project  fata-morgana.opam  fata_morgana.opam  grooph.opam  plan.typ  shell.nix  test.m4a  test.mpeg  test.txt  text.zig  v
_build/: .db  .digest-db  log
_build/default/: README.md  fata-morgana.dune-package  fata_morgana.dune-package  fata_morgana.opam  grooph.dune-package  grooph.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: fata_morgana.cma  fata_morgana.cmxa  fata_morgana.cmxs  fata_morgana.ml  fata_morgana.mli  fata_morgana__.ml-gen  fmtypes.ml  fmvideo.cma  fmvideo.cmxa  fmvideo.cmxs  grooph.cma  grooph.cmxa  grooph.cmxs  grooph.ml  grooph.mli  img_test.ml
_build/default/test/: test_fata_morgana.ml
_build/install/default/lib/grooph/: META  (+2 more)
arts/: professor.png-autosave.kra  red_sq.png~
c-src/: fata_morgana.c  fata_morgana.h  fmmath.c  fmmath.h  rusty_int.h  test.c  write_text.c
lib/: dune  fata_morgana.ml  fata_morgana.mli  fmtypes.ml  fmvideo.ml  fmvideo.mli  grooph.ml  test.c  video  video.c  video.h
src/: color_magic.zig  essence.zig  fata_morgana.zig  maths.zig  pixels.zig  shapes.zig  test.zig  text.zig
src/c/: avcodec.zig  avformat.zig  avopt.zig  freetype.zig
test/: dune  test_fata_morgana.ml
zig-cache/o/0595864e782c5d1c35f0e1e7e6ccc5a1/: build
zig-cache/o/0a1b551eb3e2da6027a1bf65c35cf645/: build
zig-cache/o/118090da809d919f6076e10bce010979/: cimport.h
zig-cache/o/183e1c3e90b027e58b50974b1bfad688/: build
(+67 files in other folders)
